--- a/core/src/mixins/_z-index.scss
+++ b/core/src/mixins/_z-index.scss
@@ -1,6 +1,6 @@
 // source: https://www.smashingmagazine.com/2014/06/sassy-z-index-management-for-complex-layouts/
 @function tds-z-index($element) {
-  $z-index: default, dropdown, tab, header, banner, overlay, modal, toast, tooltip;
+  $z-index: default, dropdown, tab, header, side-menu, banner, overlay, modal, toast, tooltip;
   $value: index($z-index, $element);
 
   @if $value {
